Bug 474507 - Mouseover item overrides item currently selected via keyboard for preview
Summary: Mouseover item overrides item currently selected via keyboard for preview
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 22.12.3
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: liweinan@kylinos.cn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-13 22:59 UTC by Barnaby
Modified: 2025-11-07 12:54 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Barnaby 2023-09-13 22:59:48 UTC
SUMMARY

At least in Details mode, with the preview sidebar open: any item currently under the mouse cursor has permanent preview priority, even if you use the keyboard to change the current selection to a different item.

STEPS TO REPRODUCE
1. In a folder with several files, click once with the cursor to select one. The preview sidebar shows a preview and information for it
2. Using the arrow keys, move the selection up and down to different files, while leaving the cursor in place

OBSERVED RESULT
The preview/info sidebar still shows info and a preview for the file under the cursor, even when a different file was more recently selected via the keyboard.

EXPECTED RESULT
When the current selection was updated using the keyboard more recently than the last mouseover event, the currently selected item should be shown in the preview bar, not the one which happens to be under the mouse cursor.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 23.04
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Comment 1 Marco Schmidlin 2024-06-05 06:29:22 UTC
This is bugging me too. I would go even further and make this a wish: don't show preview on hower, only on selection. It's very confusing to have a selection that isn't preview, just because the mouse cursor moved a bit.

This could be made configurable: "Show Preview: Hover|Selection"
Comment 2 Michael Fohqul 2025-07-11 00:50:51 UTC
(In reply to Marco Schmidlin from comment #1)
> This is bugging me too. I would go even further and make this a wish: don't
> show preview on hower, only on selection. It's very confusing to have a
> selection that isn't preview, just because the mouse cursor moved a bit.
> 
> This could be made configurable: "Show Preview: Hover|Selection"

Agreed. The info panel changing to whatever you're hovering over is annoying enough, but it's even worse when you try to counteract it by selecting a specific item only for that to not be honoured
Comment 3 TraceyC 2025-08-13 17:41:28 UTC
Thanks for the bug report. I'm sorry we weren't able to get to this yet. There have been many fixes and improvements since this was reported, and this issue may have been fixed.

Can you please re-test on your system with Dolphin 25.04.3 or later and let us know if you can still reproduce the problem? If you can, please set this report back to REPORTED. Thanks!
Comment 4 Michael Fohqul 2025-08-23 00:29:46 UTC
(In reply to TraceyC from comment #3)
> Thanks for the bug report. I'm sorry we weren't able to get to this yet.
> There have been many fixes and improvements since this was reported, and
> this issue may have been fixed.
> 
> Can you please re-test on your system with Dolphin 25.04.3 or later and let
> us know if you can still reproduce the problem? If you can, please set this
> report back to REPORTED. Thanks!

Still happening for me:
Dolphin: 25.08.0
KDE Frameworks: 6.17.0
Qt: Using 6.9.1 and built against 6.9.1
CachyOS (Wayland)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.16.2-2-cachyos
Comment 5 TraceyC 2025-08-26 21:26:15 UTC
I confirm this in Dolphin built from git-master
Comment 6 liweinan@kylinos.cn 2025-09-01 06:28:02 UTC
I'll try to solve this problem.
Comment 7 Bug Janitor Service 2025-09-01 06:51:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1037
Comment 8 Bug Janitor Service 2025-09-02 10:30:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1044
Comment 9 Méven 2025-11-07 12:54:40 UTC
Git commit bad63660b4c3253fdbd5fc3f989146519a7338b7 by Méven Car, on behalf of weinan li.
Committed on 07/11/2025 at 12:54.
Pushed by meven into branch 'master'.

informationpanel: ensure selection info is shown when using keyboard navigation

The original implementation prioritized mouse hover over keyboard selection,
preventing panel updates when navigating with arrow keys while the mouse
was over another item.

This patch adds explicit state tracking to ensure keyboard selections
always update the panel, regardless of mouse position.

M  +7    -2    src/panels/information/informationpanel.cpp
M  +2    -0    src/panels/information/informationpanel.h

https://invent.kde.org/system/dolphin/-/commit/bad63660b4c3253fdbd5fc3f989146519a7338b7