informationpanel: ensure selection info is shown when using keyboard navigation

The original implementation prioritized mouse hover over keyboard selection,
preventing panel updates when navigating with arrow keys while the mouse
was over another item.

This patch adds explicit state tracking to ensure keyboard selections
always update the panel, regardless of mouse position.

BUG: 474507